{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 492,
  "lineage": "f479f62a-f936-1d57-96ac-2dd0ac84c6f8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d09b336638069a5",
            "arn": "arn:aws:ec2:ap-south-1:271740379017:elastic-ip/eipalloc-07d09b336638069a5",
            "association_id": "eipassoc-0e51437a5c913cd5e",
            "domain": "vpc",
            "id": "eipalloc-07d09b336638069a5",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-00e287ce8da8d3999",
            "private_dns": "ip-10-40-0-248.ap-south-1.compute.internal",
            "private_ip": "10.40.0.248",
            "public_dns": "ec2-13-207-8-116.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.207.8.116",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "syrabit-nat-eip",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "tags_all": {
              "Name": "syrabit-nat-eip",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:271740379017:internet-gateway/igw-0b532fda2fcd7cc7f",
            "id": "igw-0b532fda2fcd7cc7f",
            "owner_id": "271740379017",
            "region": "ap-south-1",
            "tags": {
              "Name": "syrabit-workers-igw",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "tags_all": {
              "Name": "syrabit-workers-igw",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "vpc_id": "vpc-0dac209c5295c75d7"
          },
          "dependencies": [
            "aws_vpc.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d09b336638069a5",
            "association_id": "eipassoc-0e51437a5c913cd5e",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-08538b6724343a871",
            "network_interface_id": "eni-00e287ce8da8d3999",
            "private_ip": "10.40.0.248",
            "public_ip": "13.207.8.116",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09e56a6451ed695af",
            "tags": {
              "Name": "syrabit-nat",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "tags_all": {
              "Name": "syrabit-nat",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "vpc_id": "vpc-0dac209c5295c75d7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.workers",
            "aws_subnet.public_a",
            "aws_vpc.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:271740379017:route-table/rtb-043cb9d5a5cc1eff4",
            "id": "rtb-043cb9d5a5cc1eff4",
            "owner_id": "271740379017",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08538b6724343a871",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "syrabit-private-rt",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "tags_all": {
              "Name": "syrabit-private-rt",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dac209c5295c75d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.workers",
            "aws_nat_gateway.workers",
            "aws_subnet.public_a",
            "aws_vpc.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:271740379017:route-table/rtb-0cb260548ae68c3c5",
            "id": "rtb-0cb260548ae68c3c5",
            "owner_id": "271740379017",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b532fda2fcd7cc7f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "syrabit-public-rt",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "tags_all": {
              "Name": "syrabit-public-rt",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dac209c5295c75d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.workers",
            "aws_vpc.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac59ec42952c0c56",
            "region": "ap-south-1",
            "route_table_id": "rtb-043cb9d5a5cc1eff4",
            "subnet_id": "subnet-0fc090441683b7a03"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.workers",
            "aws_nat_gateway.workers",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df53f6924f9fef26",
            "region": "ap-south-1",
            "route_table_id": "rtb-043cb9d5a5cc1eff4",
            "subnet_id": "subnet-06c25391c746b1d8c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.workers",
            "aws_nat_gateway.workers",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d64ef79f6fb182e2",
            "region": "ap-south-1",
            "route_table_id": "rtb-0cb260548ae68c3c5",
            "subnet_id": "subnet-09e56a6451ed695af"
          },
          "dependencies": [
            "aws_internet_gateway.workers",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0464b8d4b290bc1b8",
            "region": "ap-south-1",
            "route_table_id": "rtb-0cb260548ae68c3c5",
            "subnet_id": "subnet-0a7b52a16602f379d"
          },
          "dependencies": [
            "aws_internet_gateway.workers",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:271740379017:security-group/sg-04e26854a97c20f8f",
            "description": "Allows workers SG to reach VPC interface endpoints over 443.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e26854a97c20f8f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from worker tasks",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01107e8f42d86054a"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "syrabit-vpc-endpoints",
            "name_prefix": "",
            "owner_id": "271740379017",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "syrabit-vpc-endpoints",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "tags_all": {
              "Name": "syrabit-vpc-endpoints",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dac209c5295c75d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.workers_egress",
            "aws_vpc.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:271740379017:security-group/sg-01107e8f42d86054a",
            "description": "Outbound 443 + DNS (53) to VPC resolver; used by Lambda/Fargate workers.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS to AWS APIs and the internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.40.0.0/16"
                ],
                "description": "DNS (TCP fallback) to VPC resolver",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "10.40.0.0/16"
                ],
                "description": "DNS (UDP) to VPC resolver",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "id": "sg-01107e8f42d86054a",
            "ingress": [],
            "name": "syrabit-workers-egress",
            "name_prefix": "",
            "owner_id": "271740379017",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "syrabit-workers-egress",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "tags_all": {
              "Name": "syrabit-workers-egress",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dac209c5295c75d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:271740379017:subnet/subnet-0fc090441683b7a03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.40.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc090441683b7a03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "271740379017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "syrabit-private-a",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit",
              "tier": "private"
            },
            "tags_all": {
              "Name": "syrabit-private-a",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit",
              "tier": "private"
            },
            "vpc_id": "vpc-0dac209c5295c75d7"
          },
          "dependencies": [
            "aws_vpc.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:271740379017:subnet/subnet-06c25391c746b1d8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.40.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c25391c746b1d8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "271740379017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "syrabit-private-b",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit",
              "tier": "private"
            },
            "tags_all": {
              "Name": "syrabit-private-b",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit",
              "tier": "private"
            },
            "vpc_id": "vpc-0dac209c5295c75d7"
          },
          "dependencies": [
            "aws_vpc.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:271740379017:subnet/subnet-09e56a6451ed695af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.40.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e56a6451ed695af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "271740379017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "syrabit-public-a",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit",
              "tier": "public"
            },
            "tags_all": {
              "Name": "syrabit-public-a",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit",
              "tier": "public"
            },
            "vpc_id": "vpc-0dac209c5295c75d7"
          },
          "dependencies": [
            "aws_vpc.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:271740379017:subnet/subnet-0a7b52a16602f379d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.40.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7b52a16602f379d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "271740379017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "syrabit-public-b",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit",
              "tier": "public"
            },
            "tags_all": {
              "Name": "syrabit-public-b",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit",
              "tier": "public"
            },
            "vpc_id": "vpc-0dac209c5295c75d7"
          },
          "dependencies": [
            "aws_vpc.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:271740379017:vpc/vpc-0dac209c5295c75d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.40.0.0/16",
            "default_network_acl_id": "acl-0a278e0f974135588",
            "default_route_table_id": "rtb-03c141b5ff8222d11",
            "default_security_group_id": "sg-02f7625ca0430a482",
            "dhcp_options_id": "dopt-047001fd5a7fc0184",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dac209c5295c75d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c141b5ff8222d11",
            "owner_id": "271740379017",
            "region": "ap-south-1",
            "tags": {
              "Name": "syrabit-workers-vpc",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "tags_all": {
              "Name": "syrabit-workers-vpc",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:271740379017:vpc-endpoint/vpce-0cc10cad830f17e3b",
            "cidr_blocks": [
              "52.219.156.0/22",
              "52.219.160.0/23",
              "52.219.62.0/23",
              "3.5.212.0/23",
              "3.5.208.0/22",
              "16.12.3.0/24",
              "16.12.40.0/23",
              "52.219.64.0/22",
              "16.12.36.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cc10cad830f17e3b",
            "ip_address_type": "ipv4",
            "owner_id": "271740379017",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "region": "ap-south-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-043cb9d5a5cc1eff4"
            ],
            "service_name": "com.amazonaws.ap-south-1.s3",
            "service_region": "ap-south-1",
            "state": "available",
            "tags": {
              "Name": "syrabit-vpce-s3",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "tags_all": {
              "Name": "syrabit-vpce-s3",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0dac209c5295c75d7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.workers",
            "aws_nat_gateway.workers",
            "aws_route_table.private",
            "aws_subnet.public_a",
            "aws_vpc.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secrets_manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:271740379017:vpc-endpoint/vpce-0766d9bc08945f0d6",
            "dns_entry": [
              {
                "dns_name": "vpce-0766d9bc08945f0d6-tms2ally.secretsmanager.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0766d9bc08945f0d6-tms2ally-ap-south-1b.secretsmanager.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0766d9bc08945f0d6-tms2ally-ap-south-1a.secretsmanager.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "secretsmanager.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z025834632V1XRJP3SZJF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0766d9bc08945f0d6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0630bd450b6fcb856",
              "eni-06a4a7050b371a273"
            ],
            "owner_id": "271740379017",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-south-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-04e26854a97c20f8f"
            ],
            "service_name": "com.amazonaws.ap-south-1.secretsmanager",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.40.42.191",
                "subnet_id": "subnet-0fc090441683b7a03"
              },
              {
                "ipv4": "10.40.57.160",
                "subnet_id": "subnet-06c25391c746b1d8c"
              }
            ],
            "subnet_ids": [
              "subnet-06c25391c746b1d8c",
              "subnet-0fc090441683b7a03"
            ],
            "tags": {
              "Name": "syrabit-vpce-secrets",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "tags_all": {
              "Name": "syrabit-vpce-secrets",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dac209c5295c75d7"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_security_group.workers_egress",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ses",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:271740379017:vpc-endpoint/vpce-017fe46479d85ae1e",
            "dns_entry": [
              {
                "dns_name": "vpce-017fe46479d85ae1e-xfn0xkaz.email-smtp.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-017fe46479d85ae1e-xfn0xkaz-ap-south-1b.email-smtp.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-017fe46479d85ae1e-xfn0xkaz-ap-south-1a.email-smtp.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "email-smtp.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z05471561B78D7ULVPD5B"
              },
              {
                "dns_name": "email-smtp.ap-south-1.api.aws",
                "hosted_zone_id": "Z054716321OZ2BC0UVXUG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-017fe46479d85ae1e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0b6498cfc3cb8b67c",
              "eni-0cb04b6f9649a94b6"
            ],
            "owner_id": "271740379017",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-south-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-04e26854a97c20f8f"
            ],
            "service_name": "com.amazonaws.ap-south-1.email-smtp",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.40.43.4",
                "subnet_id": "subnet-0fc090441683b7a03"
              },
              {
                "ipv4": "10.40.58.174",
                "subnet_id": "subnet-06c25391c746b1d8c"
              }
            ],
            "subnet_ids": [
              "subnet-06c25391c746b1d8c",
              "subnet-0fc090441683b7a03"
            ],
            "tags": {
              "Name": "syrabit-vpce-ses",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "tags_all": {
              "Name": "syrabit-vpce-ses",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dac209c5295c75d7"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_security_group.workers_egress",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:271740379017:vpc-endpoint/vpce-00b93021d6cd11013",
            "dns_entry": [
              {
                "dns_name": "vpce-00b93021d6cd11013-6k2h54d1.sqs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-00b93021d6cd11013-6k2h54d1-ap-south-1b.sqs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-00b93021d6cd11013-6k2h54d1-ap-south-1a.sqs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "sqs.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z0165331XOP6NUYXXNW6"
              },
              {
                "dns_name": "sqs.ap-south-1.api.aws",
                "hosted_zone_id": "Z02599822QAB1CTGOQXIF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00b93021d6cd11013",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01fc4aa04bb673aba",
              "eni-0ad5413e9eacd8c95"
            ],
            "owner_id": "271740379017",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-south-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-04e26854a97c20f8f"
            ],
            "service_name": "com.amazonaws.ap-south-1.sqs",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.40.46.248",
                "subnet_id": "subnet-0fc090441683b7a03"
              },
              {
                "ipv4": "10.40.48.42",
                "subnet_id": "subnet-06c25391c746b1d8c"
              }
            ],
            "subnet_ids": [
              "subnet-06c25391c746b1d8c",
              "subnet-0fc090441683b7a03"
            ],
            "tags": {
              "Name": "syrabit-vpce-sqs",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "tags_all": {
              "Name": "syrabit-vpce-sqs",
              "credit-source": "aws-activate",
              "environment": "prod",
              "landing-zone": "aws-async-workers",
              "managed-by": "terraform",
              "owner": "infra",
              "project": "syrabit"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0dac209c5295c75d7"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_security_group.workers_egress",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.workers"
          ]
        }
      ]
    }
  ]
}